[tool.poetry]
name = "autonomous-mind"
version = "0.1.2"
description = ""
authors = ["Mengyang (John) Cha <15233508+solarapparition@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.1.52"
langchain-anthropic = "^0.1.11"
colorama = "^0.4.6"
ruamel-yaml = "^0.18.6"
toml = "^0.10.2"
tiktoken = "^0.6.0"
langchain-openai = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.4.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
